# libcrc

./: .clang-tidy  .gitignore  APIReference.md  CMakeLists.txt  INSTALL  LICENSE  Makefile  Makefile.crc  Makefile.libcrc  README.md  USAGE.md  libcrc.pc.in  library.json
cmake/: CMakeLists.txt
cmake/finders/: FindClangTidy.cmake  FindGcov.cmake  FindGcovr.cmake  FindIncludeWhatYouUse.cmake
cmake/modules/: CodeCoverage.cmake  CommonOptions.cmake  UseClangTidy.cmake  UseGTest.cmake  UseIncludeWhatYouUse.cmake
cmake/templates/: crc.pc.in  crcConfig.cmake.in
doc/: CRC_POLY.md  CRC_START.md  checksum_NMEA.md  crc_16.md  crc_32.md  crc_64_ecma.md  crc_64_we.md  crc_8.md  crc_ccitt32_ffffffff.md  crc_ccitt_1d0f.md  crc_ccitt_ffff.md  crc_dnp.md  crc_kermit.md  crc_modbus.md  crc_poly.md  crc_sick.md  crc_start.md  crc_xmodem.md  update_crc_16.md  update_crc_32.md  update_crc_64.md  update_crc_8.md  update_crc_ccitt.md  update_crc_ccitt32.md  update_crc_dnp.md  update_crc_kermit.md  update_crc_sick.md
examples/: CMakeLists.txt  tstcrc.c
include/: CMakeLists.txt  checksum.h
precalc/: CMakeLists.txt  crc32_table.c  crc64_table.c  precalc.c  precalc.h
precalc/host_obj/: README
src/: crc16.c  crc32.c  crc64.c  crc8.c  crcccitt.c  crcccitt32.c  crcdnp.c  crckrmit.c  crcsick.c  nmea-chk.c
test/: CMakeLists.txt  testall.c  testall.h  testcrc.c  testnmea.c
